--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.15.0",
     "styled-components": "^5.3.5"
   },
